<resources>
    <string name="app_name">Easy Pill</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register_button">No account? Register here!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_email">Email</string>
    <string name="add_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_home_page_controller">HomePageActivityController</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_add">Add Medications</string>
    <string name="navigation_view">View Medications</string>
    <string name="navigation_history">Medication History</string>
    <string name="navigation_logout">Logout</string>
    <string name="medication_name">Medication Name</string>
    <string name="medication_frequency">Number of times per day</string>
    <string name="medication_num_of_days">How many days</string>
    <string name="medication_notes">Notes</string>
    <string name="medication_dosage">Dosage</string>
    <string name="medication_initial_dosage">Initial Dosage</string>
    <string name="medicaiton_add_button">Add Medication</string>
    <string name="medication_history_button">Medication History</string>

    <string name="empty_list">Click on the button below to begin!</string>

    <string name="add_medication">Medication</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_medication">Discard Medication</string>
    <string name="action_save_medication">Save Reminder</string>

    <string name="editor_activity_title_new_medication">Add Medication Details</string>
    <string name="editor_activity_title_edit_medication">Edit Medication</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Medication?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_medication_successful">Medication deleted</string>

    <string name="editor_delete_medication_failed">Error with deleting medication</string>

    <string name="editor_insert_medication_successful">Medication saved</string>

    <string name="editor_insert_medication_failed">Error with saving medication</string>

    <string name="editor_update_medication_successful">medication updated</string>

    <string name="editor_update_medication_failed">Error with updating medication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
